syntax = "proto3";

// Angiver namespace til den genererede C#-kode
option csharp_namespace = "UserService.Grpc";

// gRPC-tjeneste til autentificering og brugerhåndtering
service AuthService {
  // Login med email og adgangskode, returnerer et JWT-token
  rpc Login (LoginRequest) returns (LoginResponse);

  // Registrering af ny bruger
  rpc Register (RegisterRequest) returns (RegisterResponse);

  // Hent brugerinformation baseret på JWT-token
  rpc GetUser (UserRequest) returns (UserResponse);
}

// Login-anmodning med email og adgangskode
message LoginRequest {
  string email = 1;     // Brugerens emailadresse
  string password = 2;  // Brugerens adgangskode
}

// Svar på login, indeholder JWT-token
message LoginResponse {
  string token = 1;     // JWT-token der bruges til autentificering
}

// Registreringsanmodning med email, adgangskode og brugernavn
message RegisterRequest {
  string email = 1;     // Email for ny bruger
  string password = 2;  // Adgangskode
  string username = 3;  // Ønsket brugernavn
}

// Svar på registrering, angiver om det lykkedes
message RegisterResponse {
  bool success = 1;     // True hvis registrering lykkedes
}

// Anmodning om brugerdata baseret på token
message UserRequest {
  string token = 1;     // JWT-token sendt fra klient
}

// Svar med brugerens data
message UserResponse {
  string email = 1;     // Brugerens email
  string username = 2;  // Brugerens brugernavn
}
