syntax = "proto3";

option csharp_namespace = "Protos.Grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package user;

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string firstname = 4;
  string lastname = 5;
  string birthday = 6;
  repeated LocationMessage locations = 7;
}

message LocationMessage {
  string street = 1;
  string houseNumber = 2;
  string city = 3;
  string country = 4;
}

message GetUserByIdRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;

  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue password = 3;
  google.protobuf.StringValue email = 4;
  google.protobuf.StringValue firstname = 5;
  google.protobuf.StringValue lastname = 6;
  google.protobuf.StringValue birthday = 7;

  repeated LocationMessage locations = 8;
}


message DeleteUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstname = 4;
  string lastname = 5;
  string birthday = 6;
  repeated LocationMessage locations = 7;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ChangePasswordRequest {
  string userId = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc GetAllUsers (google.protobuf.Empty) returns (UserListResponse);
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}
